kubernetes/apps/home/envoy-gateway/config/opensprinkler.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.37.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: opensprinkler
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.37.1-standalone-strict/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opensprinkler-1
  labels:
    kubernetes.io/service-name: opensprinkler
addressType: IPv4
ports:
  - name: http
    port: 80
    protocol: TCP
endpoints:
  - addresses:
      - 10.0.80.99
---
# yaml-language-server: $schema=https://k8s-versioned-schemas.pages.dev/gateway-api/1.6.3/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensprinkler
spec:
  hostnames:
    - h2o.clerici.tech
  parentRefs:
    - name: external
      namespace: envoy-gateway
      sectionName: https
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - cookie
      backendRefs:
        - name: opensprinkler
          port: 80
